[package]
name = "bench_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bastion = "0.4.5"
coerce = "0.8.7"
criterion = "0.4"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
mimalloc = { version = "*", default-features = false }

# [[bench]]
# name = "bastion_benches"
# harness = false

[[bench]]
name = "coerce_benches"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "fat"
codegen-units = 1